--- a/index.css
+++ b/index.css
@@ -1,40 +1,145 @@
-.nav1 {
-    margin: 50px 1750px 50px 500px;
-    padding: 30px;
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    /*border: 0;*/
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+body {
+    line-height: 1;
+}
+ol, ul {
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+*{
+    box-sizing: border-box;
+    border: 1px solid grey;
+    max-width: 100%;
+/*    General styles */
+}
+html{
+    font-size: 62.5%;
+}
+body{
+    font-size: 1.6rem;
+    line-height: 1.5;
+    font-family: 'Roboto Mono', monospace;
+}
+h1{
+    font-family: 'Chelsea Market', cursive;
+    font-size: 6rem;
+}
+section{
+    padding: 4% 0;
+    width: 90%;
+    margin: 0 auto;
+}
+
+/*header section*/
+nav {
+    padding: 2% 0;
+}
+nav a{
+    display: inline-block;
+    padding: 1% 0;
+    width: 10%;
+    text-align: center;
+    border-radius: 10px;
+    color: white;
+    text-decoration: none;
+}
+
+.orange{
     background-color: #FF764E;
-    border-radius: 25px;
-
-
-
+    margin-left: 10%;
 }
-.nav2 {
-    margin: 50px 1750px 50px 500px;
-    padding: 30px;
+.blue{
     background-color: #5ED3EB;
-    border-radius: 25px;
-
-
+    margin: 0 24%;
 }
-.nav3 {
-    margin: 50px 1750px 50px 500px;
-    padding: 30px;
+.yellow{
     background-color: #FFCD69;
-    border-radius: 25px;
-
+    margin-right: 10%;
+}
+/*title section*/
+.text, .image{
+    display: inline-block;
+}
+.image {
+    width: 30%;
+}
+.cta{
+    position: relative;
+}
+.round{
+    display: inline-block;
 
 }
-.img {
-    height: 400px;
-    width: 400px;
+.image{
+    width: 30%;
+}
+.image img {
     border-radius: 50%;
 }
-h1 {
-    font-family: 'Chelsea Market', cursive;
+.text {
+    width: 55%;
+    margin-left: 5%;
+    text-align: center;
+    line-height: 3;
+    position: absolute;
+    top: 150px;
 }
-p {
-    font-family: 'Chelsea Market', cursive;
+.main{
+    background-color: #DDB9A3;
+    color: white;
+    padding: 2%;
 }
-.fire {
-    height: 200px;
-    width: 200px;
+.info div {
+    width: 30%;
+    margin: 5% auto;
+}
+.bold {
+    font-weight: bold;
+}
+.bg-img {
+    background-image: url("assets/footer_img.jpg");
+    height: 50vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top center;
+}
+footer {
+    background-color: #F9E7DC;
 }
